manifests/minecraft-ozone-3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-ozone-3
  namespace: default
  labels:
    app: minecraft-ozone-3
spec:
  replicas: 0
  selector:
    matchLabels:
      app: minecraft-ozone-3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: minecraft-ozone-3
    spec:
      containers:
      - name: minecraft-ozone-3
        image: itzg/minecraft-server:java8-openj9
        stdin: true
        tty: true
        volumeMounts:
        - name: minecraft-data
          mountPath: /data
        ports:
        - containerPort: 25565
        resources:
          requests:
            memory: 8Gi
      volumes:
      - name: minecraft-data
        persistentVolumeClaim:
          claimName: minecraft-ozone-3

---

apiVersion: v1
kind: Service
metadata:
  name: minecraft-ozone-3
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.50.162
  selector:
    app: minecraft-ozone-3
  ports:
    - protocol: TCP
      port: 25565

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-minecraft-debug
  namespace: default
  labels:
    app: ubuntu-minecraft-debug
spec:
  replicas: 0
  selector:
    matchLabels:
      app: ubuntu-minecraft-debug
  template:
    metadata:
      labels:
        app: ubuntu-minecraft-debug
    spec:
      containers:
      - name: ubuntu
        image: ubuntu
        command: ["/bin/bash"]
        args:
        - -c
        - >
          apt update;
          apt install -y python3 git unzip;
          git clone https://github.com/Fenixin/Minecraft-Region-Fixer.git;
          sleep infinity;
        volumeMounts:
        - name: minecraft-data
          mountPath: /data
      volumes:
      - name: minecraft-data
        persistentVolumeClaim:
          claimName: minecraft-ozone-3
