manifests/terraria.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraria
  namespace: default
  labels:
    app: terraria
spec:
  replicas: 0
  selector:
    matchLabels:
      app: terraria
  template:
    metadata:
      labels:
        app: terraria
    spec:
      containers:
      - name: terraria
        image: kevinchanaka/terraria:latest
        ports:
        - containerPort: 7777
        volumeMounts:
        - name: terraria-data
          mountPath: /app/data
        - name: terraria-config
          mountPath: /app/data/config/serverconfig.txt
          subPath: serverconfig.txt
      volumes:
      - name: terraria-data
        persistentVolumeClaim:
          claimName: terraria
      - name: terraria-config
        configMap:
          items:
          - key: serverconfig.txt
            path: serverconfig.txt
          name: terraria-config
        
---

apiVersion: v1
kind: Service
metadata:
  name: terraria
  namespace: default
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.50.161
  selector:
    app: terraria
  ports:
    - protocol: TCP
      port: 7777
