manifests/plex.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: default
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: plexinc/pms-docker
        ports:
        - containerPort: 32400
        volumeMounts:
        - name: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: media
          mountPath: /data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex-config
      - name: transcode
        persistentVolumeClaim:
          claimName: plex-transcode        
      - name: media
        persistentVolumeClaim:
          claimName: plex-media  
        
---

apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: plex
  ports:
    - protocol: TCP
      port: 32400

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts: 
    - plex.lab.kevinf.xyz
    secretName: plex-tls
  rules:
  - host: plex.lab.kevinf.xyz
    http:
      paths:
      - backend:
          service:
            name: plex
            port: 
              number: 32400
        path: /
        pathType: Prefix
