manifests/transmission.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: default
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: lscr.io/linuxserver/transmission:latest
        ports:
        - containerPort: 9091   
        volumeMounts:
        - name: downloads
          mountPath: /downloads
        - name: config
          mountPath: /config
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: transmission-downloads
      - name: config
        persistentVolumeClaim:
          claimName: transmission-config

---

apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
    - protocol: TCP
      port: 9091

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts: 
    - transmission.lab.kevinf.xyz
    secretName: transmission-tls
  rules:
  - host: transmission.lab.kevinf.xyz
    http:
      paths:
      - backend:
          service:
            name: transmission
            port: 
              number: 9091
        path: /
        pathType: Prefix
